# mercury

./: .gitignore  Dockerfile  README.md  cmd.txt  docker-compose.yml  frames_2026-02-20_01.46.38.gv  frames_2026-02-20_02.01.49.gv  frames_2026-02-20_02.18.18.gv  frames_2026-02-20_03.27.40.gv  frames_2026-02-20_03.30.22.gv  frames_2026-02-20_04.29.09.gv  frames_2026-02-20_12.15.34.gv  frames_2026-02-20_12.38.58.gv  frames_2026-02-20_12.51.30.gv
src/bringup/: package.xml  setup.py
src/bringup/bringup/: goal_decomposer.py  lidar.launch.py  localization.launch.py  twist_to_stamped.py
src/bringup/config/: bringup.rviz
src/bringup/launch/: bringup_base.launch.py  bringup_real.launch.py  bringup_sim.launch.py  lidar.launch.py  localization.launch.py  slam.launch.py
src/control/: CMakeLists.txt  package.xml
src/description/: package.xml  setup.py
src/description/launch/: description.launch.py  display.launch.py
src/description/urdf/: robot.urdf  robot.urdf.xacro  robot_base.xacro  robot_control.xacro  robot_sensors.xacro  robot_sim.xacro
src/hardware/: CMakeLists.txt  package.xml
src/hardware/launch/: hardware.launch.py
src/localization/: CMakeLists.txt  package.xml
src/localization/config/: ekf.yaml
src/localization/launch/: ekf.launch.py  localization.launch.py  slam.launch.py
src/localization/src/: fake_encoder.cpp  fake_odom.cpp
src/perception/: package.xml  setup.py
src/perception/launch/: perception.launch.py
src/perception/perception/: lane_detection.py
src/planning/: CMakeLists.txt  package.xml
src/planning/config/: global_costmap.yaml  local_costmap.yaml  nav2_params.yaml
src/planning/launch/: planning.launch.py
src/simulation/: package.xml  setup.py
src/simulation/launch/: simulation.launch.py
src/simulation/models/ugvc_track/: model.config  model.sdf
src/simulation/worlds/: mercury.sdf
src/system/: package.xml  setup.py
